--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Edit a recipe</h1>
+
 
 <div class="container text-center">
-<h1>Add a new cocktail</h1>
+<h1>Edit <%= @cocktail.name %> cocktail</h1>
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
   <%= f.button :submit, class: "btn btn-primary"%>
