--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -5,11 +5,17 @@
 <% @cocktail.doses.each do |dose| %>
  <hr>
  <p>Ingredients</p>
- <p><%= dose.ingredient.name %> : <%= dose.description %></p>
+ <p><%= dose.ingredient.name %> : <%= dose.description %>
+   <%= link_to dose_path(dose), method: :delete, data: {
+              confirm: 'Are you sure?'} do %>
+            <i class="fa fa-trash"></i>
+          <% end %>
+ </p>
  <% end %>
 
 
 <%= link_to 'Modify', edit_cocktail_path, class: "btn btn-primary"  %>
+<%= link_to "Add a dose", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
 <%= link_to 'Back to home', cocktails_path, class: "btn btn-primary"  %>
 
 
