--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,36 @@
 @import "pages/index";
 
 
-.container {
-  width: 600px;
+.card {
+  margin-top: 64px;
+  height: 300px;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  background-size: cover !important;
+  background-position: center;
+  color: #3E3F43;
+  background-color: #575757;
+  position: relative;
+  transition: 0.2s;
+  &:hover {
+    transform: scale(0.98);
+    box-shadow: 0 0 25px #1B64AA;
+  }
 }
+
+.add-btn {
+  margin-top: 16px;
+}
+
+.see-details {
+  margin-left: 8px;
+}
+.cocktail {
+  margin-left: 8px;
+}
+
+label {
+  color: white;
+  font-family: helvetica;
+  font-size: 1.5em;
+}
+
