--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,10 +1,10 @@
-
+<h1 class="title">Change doses</h1>
 
 <div class="container text-center">
 <h1>Edit <%= @cocktail.name %> cocktail</h1>
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
-  <%= f.button :submit, class: "btn btn-primary"%>
-  <%= link_to 'Return', cocktails_path, class: "btn btn-primary"  %>
+  <%= f.button :submit, class: "btn btn-primary pink"%>
+  <%= link_to 'Return', cocktails_path, class: "btn btn-primary pink"  %>
 <% end %>
 </div>
