--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container text-center">
-<h1>Add a new cocktail</h1>
+<h1 class="title">Add a new cocktail</h1>
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
-  <%= f.button :submit, class: "btn btn-primary"%>
-  <%= link_to 'Return', cocktails_path, class: "btn btn-primary"  %>
+  <%= f.button :submit, class: "btn btn-primary pink"%>
+  <%= link_to 'Return', cocktails_path, class: "btn btn-primary pink"  %>
 <% end %>
 </div>
