--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,10 +1,9 @@
-<div class="container text-center">
-<h1>Cocktail</h1>
-
+<div class="text-center">
+<h1 class="title">This is your cocktail</h1>
+<br>
 <h2><%= @cocktail.name %></h2>
+<p><strong> Ingredients : </strong></p>
 <% @cocktail.doses.each do |dose| %>
- <hr>
- <p>Ingredients</p>
  <p><%= dose.ingredient.name %> : <%= dose.description %>
    <%= link_to dose_path(dose), method: :delete, data: {
               confirm: 'Are you sure?'} do %>
@@ -14,9 +13,9 @@
  <% end %>
 
 
-<%= link_to 'Modify', edit_cocktail_path, class: "btn btn-primary"  %>
-<%= link_to "Add a dose", new_cocktail_dose_path(@cocktail), class: "btn btn-primary" %>
-<%= link_to 'Back to home', cocktails_path, class: "btn btn-primary"  %>
+<%= link_to 'Modify', edit_cocktail_path, class: "btn btn-primary pink"  %>
+<%= link_to "Add a dose", new_cocktail_dose_path(@cocktail), class: "btn btn-primary pink" %>
+<%= link_to 'Back to home', cocktails_path, class: "btn btn-primary pink"  %>
 
 
 
