--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,6 @@
 .home-layout {
   height: calc(100vh - 0px);
-  background-image: url('https://image.freepik.com/free-vector/colorful-cocktail-neon-sign_23-2147823239.jpg');
+  background-image: url('https://res.cloudinary.com/dt4lcygop/image/upload/v1558121821/background_a2msmw.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
