--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -4,3 +4,10 @@
 label {
   color: white;
 }
+
+.cocktail-edit {
+  border: solid 2px white;
+    width: 60%;
+    margin: 5% auto;
+    padding-bottom: 16px;
+}
