--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -2,6 +2,8 @@
 <h1 class="title">Add a new cocktail</h1>
 <%= simple_form_for @cocktail do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
   <%= f.button :submit, class: "btn btn-primary pink"%>
   <%= link_to 'Return', cocktails_path, class: "btn btn-primary pink"  %>
 <% end %>
