--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,54 +1,21 @@
-<div class="navbar-wagon">
-  <!-- Logo -->
-  <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= image_tag ('logo.png') %> Miss Coktail
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <%= link_to root_path, class: "navbar-brand" do %>
+    <i class="fas fa-cocktail"></i>
   <% end %>
 
-  <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
-    <%= link_to about_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-      About
-    <% end %>
-    <%= link_to cocktails_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-      Cocktails
-    <% end %>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <!-- Profile picture with dropdown list -->
-    <div class="navbar-wagon-item">
-      <div class="dropdown">
-        <img src="https://kitt.lewagon.com/placeholder/users/SoundOfSun" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
-        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li>
-            <%= link_to about_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-              About
-            <% end %>
-          </li>
-          <li>
-            <%= link_to cocktails_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-              Cocktails
-            <% end %>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
 
-  <!-- Dropdown appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li>
-          <%= link_to about_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-            About
-          <% end %>
-        </li>
-        <li>
-          <%= link_to cocktails_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-            Cocktails
-          <% end %>
-        </li>
-      </ul>
-    </div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to "All cocktails", cocktails_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "About", about_path, class: "nav-link" %>
+      </li>
+    </ul>
   </div>
 </div>
